[gd_scene load_steps=3 format=3 uid="uid://c7w33tb1px0ul"]

[ext_resource type="Script" path="res://scripts/world_generation/overworld_map.gd" id="1_1r0ns"]
[ext_resource type="Script" path="res://scripts/world_generation/overworld_camera.gd" id="2_o0pfi"]

[node name="Overworld" type="Node2D"]
script = ExtResource("1_1r0ns")

[node name="MapLayer" type="TileMapLayer" parent="."]

[node name="OverworldCamera" type="Camera2D" parent="."]
position = Vector2(512, 384)
current = true
script = ExtResource("2_o0pfi")

[node name="MapUi" type="CanvasLayer" parent="."]

[node name="TopBar" type="MarginContainer" parent="MapUi"]
offset_left = 16.0
offset_top = 16.0
offset_right = 200.0
offset_bottom = 56.0

[node name="RegenerateButton" type="Button" parent="MapUi/TopBar"]
layout_mode = 2
text = "Regenerate Map"

[node name="MapTooltip" type="Control" parent="MapUi"]
visible = false
mouse_filter = 2

[node name="Panel" type="Panel" parent="MapUi/MapTooltip"]
anchors_preset = 0
offset_right = 240.0
offset_bottom = 140.0

[node name="TooltipLayout" type="VBoxContainer" parent="MapUi/MapTooltip/Panel"]
anchors_preset = 15
offset_left = 12.0
offset_top = 10.0
offset_right = -12.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="TitleLabel" type="Label" parent="MapUi/MapTooltip/Panel/TooltipLayout"]
text = "Unnamed Region"

[node name="BiomeLabel" type="Label" parent="MapUi/MapTooltip/Panel/TooltipLayout"]
text = "Biome: "

[node name="ClimateLabel" type="Label" parent="MapUi/MapTooltip/Panel/TooltipLayout"]
text = "Climate: "

[node name="ResourcesLabel" type="Label" parent="MapUi/MapTooltip/Panel/TooltipLayout"]
text = "Resources: "
